--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'kotlin-android'
 }
 
+def fixerPropertiesFile = rootProject.file("fixer.properties")
+def fixerProperties = new Properties()
+fixerProperties.load(new FileInputStream(fixerPropertiesFile))
+
 android {
     compileSdkVersion 30
 
@@ -13,6 +17,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField("String", "FIXER_API_KEY", fixerProperties['API_KEY'])
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -22,13 +28,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     buildFeatures {
         viewBinding true
     }
@@ -38,7 +47,8 @@ dependencies {
     // Core libraries
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.fragment:fragment-ktx:1.3.6'
 
     // UI
     implementation 'com.google.android.material:material:1.4.0'
@@ -48,6 +58,16 @@ dependencies {
     implementation 'com.google.dagger:dagger-android:2.35.1'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.35.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.35.1'
+
+    // Retrofit
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+
+    // RxJava
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
     // Tests
     testImplementation 'junit:junit:4.13.2'
