--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 def fixerPropertiesFile = rootProject.file("fixer.properties")
@@ -56,14 +58,17 @@ dependencies {
 
     // Dagger
     implementation 'com.google.dagger:dagger-android:2.35.1'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.35.1'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.35.1'
+    implementation 'com.google.dagger:hilt-android:2.38'
+    kapt 'com.google.dagger:dagger-android-processor:2.35.1'
+    kapt 'com.google.dagger:dagger-compiler:2.35.1'
+    kapt 'com.google.dagger:hilt-compiler:2.38'
 
     // Retrofit
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
     // RxJava
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
